--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -1,20 +1,17 @@
-.navbar{
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: .8rem 2rem;
-    background: #1576D1;
-    background-color: #000;
-    background: #1BBF83;
-    margin: 0;
-    color: #fff;
-    margin-bottom: 2rem;
-    h2{
-      i{
-        color: #fff;
-       
-      }
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.8rem 2rem;
+  background: #1576d1;
+  background-color: #000;
+  background: #1bbf83;
+  margin: 0;
+  color: #fff;
+  margin-bottom: 2rem;
+  h2 {
+    i {
+      color: #fff;
     }
-    
+  }
 }
